rounded the edges of the cards to prevent overflow when shrinking the size

--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ h1{
     width: 25vw;
     height: 31vw;
     perspective: 1000px;
+    
 }
 
 /* This container is needed to position the front and back side */
@@ -155,7 +156,7 @@ h1{
     position: absolute;
     width: 100%;
     height: 100%;
-
+    border-radius: 10%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
